Trino - Leverage Iceberg metadata for file pruning by visibility (#10818)
closes #10818